<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_signIn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/main_sign_in"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sign_in"
            />
        <!--tools:ignore="ContentDescription"-->

        <!--竖分割线-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#00ffee"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/Saying"
            android:maxLines="8"
            android:text="@string/main_saying"/>
    </LinearLayout>

    <!--横分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="50dp"
        android:layout_gravity="center_vertical"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_margin"
            android:text="@string/main_advantage"
            android:textSize="@dimen/fragment_text_size_medium"
            android:textColor="#7CFC00"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-20dp"
            android:text="@string/vs"
            android:textSize="@dimen/fragment_text_size_max"
            android:textColor="#FF7F00"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_disadvantage"
            android:textSize="@dimen/fragment_text_size_medium"
            android:textColor="#FF0000"/>
    </LinearLayout>

    <!--百分比-->
    <com.example.saltedfish3.mPre
        android:id="@+id/myPre"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/fragment_margin"
        android:layout_marginEnd="@dimen/fragment_margin"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:TextSize="14dp"/>



    <!--删除，改为上面一个复选框，含有用功、无用功，下面为计时器。-->
    <!--&lt;!&ndash;横分割线&ndash;&gt;-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#ffffff"/>-->


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:textSize="30sp"-->
            <!--android:textColor="@color/colorWords"-->
            <!--android:gravity="center_vertical"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/main_advantage"/>-->

        <!--&lt;!&ndash;竖分割线&ndash;&gt;-->
        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#00ffee"/>-->

        <!--<include layout="@layout/advantage_time_count_fragment"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"/>-->

        <!--&lt;!&ndash;<fragment&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/main_advantage"&ndash;&gt;-->
            <!--&lt;!&ndash;android:name="com.example.saltedfish3.AdvantageTimeCountFragment"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_weight="1"/>&ndash;&gt;-->
    <!--</LinearLayout>-->

    <!--&lt;!&ndash;横分割线&ndash;&gt;-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#ffffff"/>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_marginStart="15dp"-->
            <!--android:textSize="30sp"-->
            <!--android:textColor="@color/colorWords"-->
            <!--android:gravity="center_vertical"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/main_disadvantage"/>-->

        <!--&lt;!&ndash;竖分割线&ndash;&gt;-->
        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#00ffee"/>-->

        <!--&lt;!&ndash;<fragment&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/main_disadvantage"&ndash;&gt;-->
            <!--&lt;!&ndash;android:name="com.example.saltedfish3.AdvantageTimeCountFragment"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_weight="1"/>&ndash;&gt;-->
    <!--</LinearLayout>-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_marginStart="@dimen/fragment_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/main_advantage"
            android:id="@+id/adv_or_not_btn"
            android:background="#7CFC00"/>
        <Button
            android:layout_marginEnd="@dimen/fragment_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/start_count"
            android:id="@+id/start_count_btn"
            android:background="#EEEE00"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:divider="@drawable/gradual_change_line"
        android:showDividers="middle"
        >
        <!--app:layout_constraintLeft_toRightOf="@id/advantage_begin_count_btn"-->
        <!--app:layout_constraintBaseline_toBaselineOf="@id/advantage_begin_count_btn"-->
        <!--android:id="@+id/advantage_count_line"-->

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:textColor="@color/colorWords"
            android:textSize="@dimen/fragment_text_size_min"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
        />

        <EditText
            android:id="@+id/remark_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:hint="@string/fragment_remark"
            android:textSize="@dimen/fragment_text_size_min"
            android:gravity="center_vertical"/>
    </LinearLayout>





    <!--横分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_today_plan"/>
            <Button
                android:id="@+id/add_task"
                android:layout_width="wrap_content"
                android:layout_height=  "wrap_content"
                android:text="@string/main_new_plan"
                android:textSize="20sp"
                android:textColor="#0000FF"/>

            <!--这里要添加各项任务-->
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recycler_view">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>